# Pong

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
assets/: configuration.json
cmake/: CompilerWarnings.cmake  Dependency.cmake  Installation.cmake  PrecompiledHeaders.cmake  ProjectName.cmake.in  ProjectSettings.cmake  SourceFiles.cmake  StaticAnalyzers.cmake  Utility.cmake
docs/: CMakeLists.txt  doxy.in  layout.xml
include/Pong/: Ball.hpp  GameLayer.hpp  Player.hpp  Score.hpp
src/: Pong.cpp
src/Pong/: Player.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
